<resources>
    <string name="app_name">Nubank 2</string>

    <string name="txt_nome_usuario">Olá, Pedro</string>
    <string name="txt_saldo_conta">Conta \n\n R$ 900,00</string>
    <string name="txt_cartoes">Meus Cartões</string>
    <string name="txt_cartao_credito">Cartão de crédito</string>
    <string name="txt_fatura_atual">Fatura atual</string>
    <string name="txt_dinheiro_fatura">R$ 119,76</string>
    <string name="txt_limite_disponivel">limite disponível de R$ 5.782,69</string>
    <string name="txt_parcelar_compras">parcelar Compras</string>
</resources>