<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:background="@color/purple"
        tools:layout_editor_absoluteY="1dp">

        <View
            android:id="@+id/containerCirculo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/container_circulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_usuario"
            app:layout_constraintBottom_toBottomOf="@id/containerCirculo"
            app:layout_constraintEnd_toEndOf="@id/containerCirculo"
            app:layout_constraintStart_toStartOf="@id/containerCirculo"
            app:layout_constraintTop_toTopOf="@id/containerCirculo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_nome_usuario"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerCirculo" />

        <ImageView
            android:id="@+id/icEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_eye"
            app:layout_constraintStart_toEndOf="@id/containerCirculo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_question"
            app:layout_constraintEnd_toStartOf="@id/icPersonAdd"
            app:layout_constraintStart_toEndOf="@id/icEye"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icPersonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_person_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icQuestion"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/txt_saldo_conta"
         android:textSize="22sp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_margin="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerIconesPagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light_gray"
        app:cardCornerRadius="10dp"
        android:layout_margin="20dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cartoes"
                android:layout_margin="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_cartoes"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerProdutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/light_gray"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cartao_credito"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fatura_atual"
        android:textSize="16sp"
        android:textColor="@color/dark_gray"
        android:textStyle="bold"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_dinheiro_fatura"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_limite_disponivel"
        android:textSize="16sp"
        android:textColor="@color/dark_gray"
        android:textStyle="bold"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_parcelar_compras"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

</LinearLayout>
</androidx.core.widget.NestedScrollView>